# castle_demo

./: .gitignore  CLAUDE.md  CONTEXT.md  HELLO.md  README.md  bug-x.md  conftest.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: insta-engineer.yml
.sandcastle/: .env.example  CODING_STANDARDS.md  Dockerfile  daemon.mts  implement-prompt.md  issue-prompt.md  labels.json  main.mts  merge-prompt.md  plan-prompt.md  review-prompt.md  seed-labels.mts
content/: architecture.md  index.md  plugin-contract.md  skills.md  state-machine.md
docs/adr/: 0001-github-as-v1-substrate.md  0001-plugin-contract.md  0002-github-action-as-v1-trigger.md  0003-claude-code-and-skill-delegation.md
insta_engineer/: __init__.py  cli.py  core.py  plugin_loader.py
plugins/: 10_load.py  20_frontmatter.py  30_markdown.py  40_routes.py  90_write.py
src/: index.ts  reverse.js  reverse.test.js
tests/: test_build.py  test_frontmatter.py  test_markdown.py  test_routes.py
