[project]
name = "insta-engineer"
version = "0.1.0"
description = "Insta-Engineer: a self-working software engineer demo. A plugin-based static site generator whose content documents the AFK-agent flow that builds it."
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "python-frontmatter>=1.1",
    "jinja2>=3.1",
    "pygments>=2.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
insta-engineer = "insta_engineer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["insta_engineer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
